--- a/Fundamentos/bloco-3-HTML-CSS/dia-1-introducao/index.html
+++ b/Fundamentos/bloco-3-HTML-CSS/dia-1-introducao/index.html
@@ -14,6 +14,7 @@
         <div class="img-container">
             <img src="imagens/window.png" alt="">
         </div>
+        <div class="dia"></div>
     </main>
     <script src="js/index.js"></script>
 </body>
