adicionando feature de definir o começo e o final dos numeros

--- a/Fundamentos/bloco-6-forms-responsivo/dia-2-bibliotecas/Conjectura-collaz/index.html
+++ b/Fundamentos/bloco-6-forms-responsivo/dia-2-bibliotecas/Conjectura-collaz/index.html
@@ -15,15 +15,16 @@
   <form action="">
     <label for="especifico">
       <h4>Numero Especifico</h4>
-      <input type="number" placeholder="Digite um numero" id="especifico">
+      <input type="text" placeholder="Digite um numero" id="especifico">
       <button id="bot-especifico" class="bot btn btn-primary">Enter</button>
     </label>
     <label for="varios">
       <h4>De 0 ate o numero</h4>
-      <input type="number" placeholder="Digite um numero" id="varios">
+      <input type="text" placeholder="Digite um numero XX-XX" id="varios">
       <button id="bot-varios" class="bot btn btn-primary">Enter</button>
     </label>
   </form>
+  <h1 class="display-7 text-muted">Made by Leandro H</h1>
   
 
   
