--- a/Fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/adivinhe-a-cor/index.html
+++ b/Fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/adivinhe-a-cor/index.html
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>ADIVINHE A COR</h1>
+  <h1>ADIVINHE A COR!</h1>
   <button id="reset"><img src="https://img.icons8.com/ios-filled/50/000000/available-updates.png"/></button>
   <main>
     <div id="color-container"></div>
