pequena modificaçao no exercicio do form

--- a/Fundamentos/bloco-6-forms-responsivo/dia-2-bibliotecas/form/index.html
+++ b/Fundamentos/bloco-6-forms-responsivo/dia-2-bibliotecas/form/index.html
@@ -55,12 +55,12 @@
         <div class="radios">
           <div class="form-check col-md-6">
             <input class="form-check-input"  id="tipo1" type="radio" name="tipo" checked data-validate-field="radio">
-            <label class="form-check-label" for="tipo">Casa</label>
+            <label class="form-check-label" for="tipo1">Casa</label>
           </div>
           
           <div class="form-check col-md-6">
             <input class="form-check-input"  id="tipo2" type="radio" name="tipo" checked data-validate-field="radio">
-            <label class="form-check-label" for="tipo">Apartamento</label>
+            <label class="form-check-label" for="tipo2">Apartamento</label>
           </div>
         </div>
         
